# render_mysite

./: pyproject.toml  render.yaml
mysite/: settings.py
mysite/render/templates/render/: index.html
render/templates/render/: index.html
